--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-12.0.0"
   },
   "devDependencies": {
-    "jest-exponent": "~0.1.3"
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.0",
+    "jest-exponent": "~0.1.3",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
