--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "enzyme": "^2.7.0",
+    "enzyme": "^2.7.1",
     "jest-exponent": "~0.1.3",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "sinon": "^1.17.7"
   }
 }
