--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@exponent/vector-icons": "~2.0.3",
     "exponent": "~12.0.0",
     "react": "~15.3.2",
-    "react-native": "git+https://github.com/exponentjs/react-native#sdk-12.0.0"
+    "react-native": "git+https://github.com/exponentjs/react-native#sdk-12.0.0",
+    "react-native-star-rating": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^3.5.0",
